# cortex-m_startup

./: CMakeLists.txt  README.md  build.mk
.github/workflows/: main.yml
src/: startup.cpp
